# FireworksOpenGL

./: CMakeLists.txt  FireworksBuildWin64.rar  Readme.md  build.bat  index.md
src/: App.cpp  App.h  Fireworks.h  GameObject.h  Particle.cpp  Particle.h  Widgets.cpp  Widgets.h  main.cpp  utls.h
